--- a/education.html
+++ b/education.html
@@ -28,7 +28,7 @@
 <h2>Working Experience</h2>
 <ul>
 <li><p> Postdoctoral Researcher, WiDeS, University of South Carolina (USC), Since Feb. 2021- now.
-<li><p> Research Topic:  <strong> Propagation Statistics Guided Machine Learning (PSG-ML) </strong></p> for Wireless Communications and Intelligent Sensing; Supervisor: <a href="https://wides.usc.edu/founder.html" target=&ldquo;blank&rdquo;> Prof. Andreas F. Molisch </a> <br /> 
+<li><p> Research Topic:  <strong> Propagation Statistics Guided Machine Learning (PSG-ML) </strong> for Wireless Communications and Intelligent Sensing; Supervisor: <a href="https://wides.usc.edu/founder.html" target=&ldquo;blank&rdquo;> Prof. Andreas F. Molisch </a> <br /> 
 </p>
 </li>
 </ul>
@@ -68,7 +68,7 @@
 <p> He authored over fifty papers, holds several patents, and contributed to three book chapters. He regularly reviews technical papers, completing 100+ peer reviews for 20+ SCI-indexed journals, including 10+ IEEE Transactions. He received the 2015 Distinguished Master's Thesis Award, the 2020 SJTU Doctoral Excellence Award, and a 2020 International Postdoctoral Fellowship. He serves a TPC member for several conferences and an academic/associate editor for three SCI-indexed journals. He presented a tutorial at IEEE GLOBECOM 2022 and emphasizes reproducible research by sharing his code with the public.
 
 <h3>Memberships</h3>  
-<p>IEEE <strong>Senior Member</strong></p>, since 2022;
+<p>IEEE <strong>Senior Member</strong>, since 2022;
 <p>IEEE Communication Society Membership;
 <p>IEEE Vehicular Technology Society Membership;
 <p>IEEE Computer Society Technical Community on Learning Technology;
@@ -98,14 +98,14 @@ Information Sciences; 20) Digital Signal Processing.
 <p>4) IEEE International Conference on Communications (IEEE-ICC), since 2024.
 
 <h3>Editorial Service:</h3>  
-<p>1) Associate Editor, <strong> IEEE Open Journal of Vehicular Technology (Impact Factor: 6.4)</strong></p>, Since Oct. 2024.
-<p>3) Associate Editor, <strong> IET Electrical Systems in Transportation (Impact Factor: 2.387)</strong></p>, Since Jun. 2023.
-<p>2) Academic Editor, <strong> PLOS ONE (Impact Factor: 3.752)</strong></p>, Since Sep. 2023.
-<p>4) Academic Editor, <strong> Wiley Journal of Sensors (Impact Factor: 2.55) </strong></p>, Since Jan. 2023.
+<p>1) Associate Editor, <strong> IEEE Open Journal of Vehicular Technology (Impact Factor: 6.4)</strong>, Since Oct. 2024.
+<p>3) Associate Editor, <strong> IET Electrical Systems in Transportation (Impact Factor: 2.387)</strong>, Since Jun. 2023.
+<p>2) Academic Editor, <strong> PLOS ONE (Impact Factor: 3.752)</strong>, Since Sep. 2023.
+<p>4) Academic Editor, <strong> Wiley Journal of Sensors (Impact Factor: 2.55) </strong>, Since Jan. 2023.
 <p>5) Leading Guest Editor for the special issue ”When Mixed Reality Meets Smart Sensing with
 Wearables: The Pursuit for Efficiency, Interpretability, and Trustworthiness” in Applied Sciences;
-<p>6) Associate Editor, <strong> Journal of Artificial Intelligence and Big Data </strong></p>, since 2022.
-<p>7) Editorial Board Member, <strong> Modern Intelligent Times (MIT, 2957-7942)</strong></p>, Sep.2022-Aug.2024.
+<p>6) Associate Editor, <strong> Journal of Artificial Intelligence and Big Data </strong>, since 2022.
+<p>7) Editorial Board Member, <strong> Modern Intelligent Times (MIT, 2957-7942)</strong>, Sep.2022-Aug.2024.
 
 <p> Technical Program Committee for the peer-reviewed conferences:
 <p>1) IEEE Annual International Conference on Network and Information Systems for Computers, 2022.
