--- a/publication.html
+++ b/publication.html
@@ -30,37 +30,37 @@
 <h2>Under Going</h2>
 <ol>
 <li><p>
-SWIFT: Opportunistic mm-Wave Receivers <i>Jan. 2023 - Dec. 2025</i>.
-Supported by The U.S. National Science Foundation; 
-</strong>Role in Project: </strong></p> Key Researcher
-</p> Details: 1) Initialization of Directional Spectrum Sensing (DSS) scheme for mmWave Networks;
-2) Dataset Construction with Remcom Wireless Insite;
-3) Introduction of Propagation Physic-informed ML for sensing and conditional data generation (Diffusion model)</u>
+SWIFT: Opportunistic mm-Wave Receivers <i>Jan. 2023 - Dec. 2025</i>. <br>
+Supported by The U.S. National Science Foundation; <br> 
+</strong>Role in Project: </strong> Key Researcher. <br> 
+</p> Details: 1) Initialization of Directional Spectrum Sensing (DSS) scheme for mmWave Networks; <br>
+2) Dataset Construction with Remcom Wireless Insite; <br>
+3) Introduction of Propagation Physic-informed ML for sensing and conditional data generation (Conditional Diffusion)</u> 
 </p>
 </li> 
-<li><p> Intelligent V2V Communications: Technology for Improved Mobility <i>Jun. 2023 - Jun. 2024</i>.
- Supported by California METRANS Transportation Center;
- </strong>Role in Project: </strong></p> Key Researcher 
+<li><p> Intelligent V2V Communications: Technology for Improved Mobility <i>Jun. 2023 - Jun. 2024</i>. <br>
+ Supported by California METRANS Transportation Center; <br>
+ </strong>Role in Project: </strong> Key Researcher. <br> 
 </p>
-Details:  1)Data preprocessing for the data collected in scenarios (truck-to-truck, car-to-car, and car-to-car with trucks;)
- 2) Implementation of Predictive learning algorithms for Accurate V2V channel prediction in different geometries;
+Details:  1)Data preprocessing for the data collected in scenarios (truck-to-truck, car-to-car, and car-to-car with trucks;  <br>
+ 2) Implementation of Predictive learning algorithms for Accurate V2V channel prediction in different geometries; <br>
  3) Introducing Meta-learning for Model-agnostic channel prediction and resource allocation
 </li>
 
 <h2>Done</h2>
 <ol>
 <li><p>  Propagation Physic-informed  for Scalable and Privacy-preserving Localization in B5G Networks <i>Mar. 2021 - Mar. 2023</i>.
- Supported by  KACST, Saudi;
-</strong>Role in Project: </strong></p> Key Researcher
-</p> Details:  1) Introduction of Semantic Localization Scheme to the literature;
- 2) Deep Domain Adaptation based Transfer Learning for Enhanced Localization Algorithms;
- 3) Experimental verification over CSI Measurements campaign with 28GHz channel sounder and WIFI receivers
-<li><p> ML for Joint Communication and Sensing in B5G Systems <i>Jun. 2020 - Jun. 2022</i>.
- Supported by  Shanghai Engineering Research Center; 
- </strong>Role in Project: </strong></p> Principal Investigator
-</p> Details:  1) Integration of Information theory with efficient representation learning algorithms.
- 2) Application of new ML algorithms for joint channel modeling and UE activity recognition/reconstruction;
- 3) Implement Meta ML for Intelligent Sensing, including the setting of few-labeled data and limited memory budget.  
+ Supported by  KACST, Saudi; <br>
+</strong>Role in Project: </strong> Key Researcher. <br> 
+</p> Details:  1) Introduction of Semantic Localization Scheme to the literature; <br>
+ 2) Deep Domain Adaptation based Transfer Learning for Enhanced Localization Algorithms; <br>
+ 3) Experimental verification over CSI Measurements campaign with 28GHz channel sounder and WIFI receivers. 
+<li><p> ML for Joint Communication and Sensing in B5G Systems <i>Jun. 2020 - Jun. 2022</i>. <br>
+ Supported by  Shanghai Engineering Research Center; <br>
+ </strong>Role in Project: Principal Investigator </strong>  <br>
+</p> Details:  1) Integration of Information theory with efficient representation learning algorithms. <br>
+ 2) Application of new ML algorithms for joint channel modeling and UE activity recognition/reconstruction; <br>
+ 3) Implement Meta ML for Intelligent Sensing, including the setting of few-labeled data and limited memory budget.   <br>
 </li>
 </ol>
 <div id="footer">
