--- a/education.html
+++ b/education.html
@@ -80,7 +80,7 @@ Healthcare Innovations.
   
 <h3>Review Service:</h3> 
   
-I serve(d) as a regular reviewer with <strong>200+ reviews<strong> for below 20+ referred international journals:
+I serve(d) as a regular reviewer with <strong>200+ reviews</strong> for below 20+ referred international journals:
 <p> 0) IEEE Transactions on Signal Processing; 1) IEEE Transactions on Wireless Communication; 2) IEEE
 Transactions on Artificial Intelligence; 3) IEEE Wireless Communications Magazine; 4) IEEE Transactions
 on Big Data; 5) IEEE Transactions on Multimedia; 6) IEEE Transactions on Communications; 7) IEEE
