--- a/publication.html
+++ b/publication.html
@@ -35,7 +35,7 @@ Supported by The U.S. National Science Foundation; <br>
 </strong>Role in Project: </strong> Key Researcher. <br> 
 </p> Details: 1) Initialization of Directional Spectrum Sensing (DSS) scheme for mmWave Networks; <br>
 2) Dataset Construction with Remcom Wireless Insite; <br>
-3) Introduction of Propagation Physic-informed ML for sensing and conditional data generation (Conditional Diffusion)</u> 
+3) Introduction of Propagation Physic-informed ML for sensing and conditional data generation (Conditional Diffusion) <br> <br> 
 </p>
 </li> 
 <li><p> Intelligent V2V Communications: Technology for Improved Mobility <i>Jun. 2023 - Jun. 2024</i>. <br>
@@ -44,7 +44,7 @@ Supported by The U.S. National Science Foundation; <br>
 </p>
 Details:  1)Data preprocessing for the data collected in scenarios (truck-to-truck, car-to-car, and car-to-car with trucks;  <br>
  2) Implementation of Predictive learning algorithms for Accurate V2V channel prediction in different geometries; <br>
- 3) Introducing Meta-learning for Model-agnostic channel prediction and resource allocation
+ 3) Introducing Meta-learning for Model-agnostic channel prediction and resource allocation. <br><br>
 </li>
 
 <h2>Done</h2>
@@ -54,7 +54,7 @@ Details:  1)Data preprocessing for the data collected in scenarios (truck-to-tru
 </strong>Role in Project: </strong> Key Researcher. <br> 
 </p> Details:  1) Introduction of Semantic Localization Scheme to the literature; <br>
  2) Deep Domain Adaptation based Transfer Learning for Enhanced Localization Algorithms; <br>
- 3) Experimental verification over CSI Measurements campaign with 28GHz channel sounder and WIFI receivers. 
+ 3) Experimental verification over CSI Measurements campaign with 28GHz channel sounder and WIFI receivers. <br> <br>
 <li><p> ML for Joint Communication and Sensing in B5G Systems <i>Jun. 2020 - Jun. 2022</i>. <br>
  Supported by  Shanghai Engineering Research Center; <br>
  </strong>Role in Project: Principal Investigator </strong>  <br>
