--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@ Prior to that, I received my M.S.  and Ph.D. degrees from the
 </p>
 <div class="infoblock">
 <div class="blockcontent">
-<p>As an interdisciplinary researcher, my research interests include integrating data physics into neural network optimization and the related Wireless Communications and Smart Sensing applications (In the computer science domain, it is related to the tasks of time series generation, prediction, and anomaly detection). I am dedicated to reproducible research and have made many codes publicly available. 
+<p>As an <strong>interdisciplinary researcher</strong>, my research interests include integrating <strong> data physics into neural network optimization </strong> and 
+  the related <strong> Wireless Communications and Smart Sensing </strong>applications 
+  (In the computer science domain, it is related to the tasks of <strong>time series generation, prediction, and anomaly detection</strong>). 
+  I am dedicated to <strong>reproducible research </strong> and have made many codes publicly available. 
  <a href="https://github.com/Leo-Chu" target=&ldquo;blank&rdquo;>Please visit detailed projects and related codes</a>. 
 </p>
 </div></div>
