--- a/publication.html
+++ b/publication.html
@@ -44,13 +44,13 @@ Supported by The U.S. National Science Foundation; <br>
 </p>
 Details:  1)Data preprocessing for the data collected in scenarios (truck-to-truck, car-to-car, and car-to-car with trucks;  <br>
  2) Implementation of Predictive learning algorithms for Accurate V2V channel prediction in different geometries; <br>
- 3) Introducing Meta-learning for Model-agnostic channel prediction and resource allocation. <br><br>
+ 3) Introducing Meta-learning for Model-agnostic channel prediction and resource allocation. <br> 
 </li>
 
 <h2>Done</h2>
 <ol>
 <li><p>  Propagation Physic-informed  for Scalable and Privacy-preserving Localization in B5G Networks <i>Mar. 2021 - Mar. 2023</i>.
- Supported by  KACST, Saudi; <br>
+ <br> Supported by  King Abdulaziz City for Science and Technology, Saudi Arabia; <br>
 </strong>Role in Project: </strong> Key Researcher. <br> 
 </p> Details:  1) Introduction of Semantic Localization Scheme to the literature; <br>
  2) Deep Domain Adaptation based Transfer Learning for Enhanced Localization Algorithms; <br>
