--- a/publication.html
+++ b/publication.html
@@ -30,7 +30,7 @@
 <h2>Under Going</h2>
 <ol>
 <li><p>
-SWIFT: Opportunistic mm-Wave Receivers <i>Jan. 2023 - Dec. 2025</i>. <br>
+SWIFT: Opportunistic mm-Wave Receivers;  <i>Jan. 2023 - Dec. 2025</i>. <br>
 Supported by The U.S. National Science Foundation; <br> 
 </strong>Role in Project: </strong> Key Researcher. <br> 
 </p> Details: 1) Initialization of Directional Spectrum Sensing (DSS) scheme for mmWave Networks; <br>
@@ -38,7 +38,7 @@ Supported by The U.S. National Science Foundation; <br>
 3) Introduction of Propagation Physic-informed ML for sensing and conditional data generation (Conditional Diffusion) <br> <br> 
 </p>
 </li> 
-<li><p> Intelligent V2V Communications: Technology for Improved Mobility <i>Jun. 2023 - Jun. 2024</i>. <br>
+<li><p> Intelligent V2V Communications: Technology for Improved Mobility; <i>Jun. 2023 - Jun. 2024</i>. <br>
  Supported by California METRANS Transportation Center; <br>
  </strong>Role in Project: </strong> Key Researcher. <br> 
 </p>
@@ -49,13 +49,13 @@ Details:  1)Data preprocessing for the data collected in scenarios (truck-to-tru
 
 <h2>Done</h2>
 <ol>
-<li><p>  Propagation Physic-informed  for Scalable and Privacy-preserving Localization in B5G Networks <i>Mar. 2021 - Mar. 2023</i>.
+<li><p>  Propagation Physic-informed  for Scalable and Privacy-preserving Localization in B5G Networks;  <i>Mar. 2021 - Mar. 2023</i>.
  <br> Supported by  King Abdulaziz City for Science and Technology, Saudi Arabia; <br>
 </strong>Role in Project: </strong> Key Researcher. <br> 
 </p> Details:  1) Introduction of Semantic Localization Scheme to the literature; <br>
  2) Deep Domain Adaptation based Transfer Learning for Enhanced Localization Algorithms; <br>
  3) Experimental verification over CSI Measurements campaign with 28GHz channel sounder and WIFI receivers. <br> <br>
-<li><p> ML for Joint Communication and Sensing in B5G Systems <i>Jun. 2020 - Jun. 2022</i>. <br>
+<li><p> ML for Joint Communication and Sensing in B5G Systems;  <i>Jun. 2020 - Jun. 2022</i>. <br>
  Supported by  Shanghai Engineering Research Center; <br>
  </strong>Role in Project: Principal Investigator </strong>  <br>
 </p> Details:  1) Integration of Information theory with efficient representation learning algorithms. <br>
