--- a/publication.html
+++ b/publication.html
@@ -56,7 +56,7 @@ Details:  1)Data preprocessing for the data collected in scenarios (truck-to-tru
  2) Deep Domain Adaptation based Transfer Learning for Enhanced Localization Algorithms; <br>
  3) Experimental verification over CSI Measurements campaign with 28GHz channel sounder and WIFI receivers. <br> <br>
 <li><p> ML for Joint Communication and Sensing in B5G Systems;  <i>Jun. 2020 - Jun. 2022</i>. <br>
- Supported by  Shanghai Engineering Research Center; <br>
+ Supported by  OCPC; <br>
  </strong>Role in Project: Principal Investigator </strong>  <br>
 </p> Details:  1) Integration of Information theory with efficient representation learning algorithms. <br>
  2) Application of new ML algorithms for joint channel modeling and UE activity recognition/reconstruction; <br>
