--- a/overview.html
+++ b/overview.html
@@ -30,25 +30,27 @@ Network (NN); Random Matrix Theory; Theoretical NN Generalization Evaluation.
 
    <p>
 <p>Example Work I:  Leveraging Information Theory Criteria for Deep Domain Adaptation: A Unified Framework and Convergence Analysis. Under review. </p> 
- <p>Example Work I: Prediction in Prediction: Addressing the Course of Accumulative Prediction Error. Under review. </p> 
+ <p>Example Work II: Prediction in Prediction: Addressing the Course of Accumulative Prediction Error. Under review. </p> 
 <p>Example Work III: Conditional Diffusion for Updating Signal-to-Interference Ratio Mapping. Under review. </p> 
   
 <h2>2) PSG-ML for Communications and Sensing: </h2>  Semantic Localization; Directional Spectrum Sensing; 1-bit Massive MIMO;
 V2V Propagation Modeling; Channel Estimation/Prediction; V2V Resource Allocation; Joint Communication and Sensing. 
 
   <p>
-<p>Example Work I:  Chu, Lei, Abdullah Alghafis, and Andreas F. Molisch. "Exploiting semantic localization in highly dynamic wireless networks using deep homoscedastic domain adaptation." arXiv preprint arXiv:2310.07792 (2023). </p>
+<p>Example Work I:  Chu, L., Abdullah A., and Molisch. A. F., "Exploiting semantic localization in highly dynamic wireless networks using deep homoscedastic domain adaptation." arXiv preprint arXiv:2310.07792 (2023),  IEEE Transactions on Communications. </p>
 <p>Example Work II:  Chu, L., Wen, F., Li, L., & Qiu, R. (2019). Efficient nonlinear precoding for massive MIMO downlink systems with 1-bit DACs. IEEE Transactions on Wireless Communications, 18(9), 4213-4224. </p>
 <p>Example Work III:  Chu, L., Wen, F., & Qiu, R. C. (2019). Eigen-inference precoding for coarsely quantized massive MU-MIMO system with imperfect CSI. IEEE Transactions on Vehicular Technology, 68(9), 8729-8743. </p>
   
-<h2>3) ML (with zero-/few- shot setting) for Sciences: </h2>  Activity Recognition/Reconstruction with Wearables/Radar/WIFI; Intelligent Sensing with
+<h2>3) ML (with zero-/few- shot setting) for Sensing and Perception: </h2>  Activity Recognition/Reconstruction with Wearables/Radar/WIFI; Intelligent Sensing with
 PMU, IMU, Electroencephalogram (EEG) and Point Clouds.
 
    <p>
 <p>Example Work I:  Chu, L., Pei, L., & Qiu, R. (2021). Ahed: A heterogeneous-domain deep learning model for IoT-enabled smart health with few-labeled EEG data. IEEE Internet of Things Journal, 8(23), 16787-16800. </p>
 <p>Example Work II:  Chu, L., Qiu, R., He, X., Ling, Z., & Liu, Y. (2017). Massive streaming PMU data modeling and analytics in smart grid state evaluation based on multiple high-dimensional covariance test. IEEE Transactions on Big Data, 4(1), 55-64. </p>
 <p>Example Work III:  Zhang, Y., Xia, S., Chu, L^{#}., Yang, J., Wu, Q., & Pei, L. (2023). Dynamic Inertial Poser (DynaIP): Part-Based Motion Dynamics Learning for Enhanced Human Pose Estimation with Sparse Inertial Sensors. IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2024. </p>
-  
+<p>Example Work IV: Liu, D., Chen, C., Xu, C., Qiu, R. C., & Chu, L. (2023). Self-supervised point cloud registration with deep versatile descriptors for intelligent driving. IEEE Transactions on Intelligent Transportation Systems, 24(9), 9767-9779. 
+<p>Example Work V: Liu, D., Chen, C., Xu, C., Cai, Q., Chu, L., Wen, F., & Qiu, R. (2022). A robust and reliable point cloud recognition network under rigid transformation. IEEE Transactions on Instrumentation and Measurement, 71, 1-13.
+<p>Example Work VI: Liu D., Chu, L., etc. Multi-Frame Neural Scene Flow: Generalization Bounds and Algorithms.
 <div id="footer">
 <div id="footer-text">
 Last updated on 2024-04-23 23:34:26 Pacific Daylight Time.
