--- a/overview.html
+++ b/overview.html
@@ -44,13 +44,13 @@ V2V Propagation Modeling; Channel Estimation/Prediction; V2V Resource Allocation
 <h2>3) ML (with zero-/few- shot setting) for Sensing and Perception: </h2>  Activity Recognition/Reconstruction with Wearables/Radar/WIFI; Intelligent Sensing with
 PMU, IMU, Electroencephalogram (EEG) and Point Clouds.
 
-   <p>
+<p>
 <p>Example Work I:  Chu, L., Pei, L., & Qiu, R. (2021). Ahed: A heterogeneous-domain deep learning model for IoT-enabled smart health with few-labeled EEG data. IEEE Internet of Things Journal, 8(23), 16787-16800. </p>
-<p>Example Work II:  Chu, L., Qiu, R., He, X., Ling, Z., & Liu, Y. (2017). Massive streaming PMU data modeling and analytics in smart grid state evaluation based on multiple high-dimensional covariance test. IEEE Transactions on Big Data, 4(1), 55-64. </p>
-<p>Example Work III:  Zhang, Y., Xia, S., Chu, L^{#}., Yang, J., Wu, Q., & Pei, L. (2023). Dynamic Inertial Poser (DynaIP): Part-Based Motion Dynamics Learning for Enhanced Human Pose Estimation with Sparse Inertial Sensors. IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2024. </p>
-<p>Example Work IV: Liu, D., Chen, C., Xu, C., Qiu, R. C., & Chu, L. (2023). Self-supervised point cloud registration with deep versatile descriptors for intelligent driving. IEEE Transactions on Intelligent Transportation Systems, 24(9), 9767-9779. 
-<p>Example Work V: Liu, D., Chen, C., Xu, C., Cai, Q., Chu, L., Wen, F., & Qiu, R. (2022). A robust and reliable point cloud recognition network under rigid transformation. IEEE Transactions on Instrumentation and Measurement, 71, 1-13.
-<p>Example Work VI: Liu D., Chu, L., etc. Multi-Frame Neural Scene Flow: Generalization Bounds and Algorithms.
+<p>Example Work II:  Chu, L., Qiu, R., He, X., Ling, Z., & Liu, Y. (2017). Massive streaming PMU data modeling and analytics based on multiple high-dimensional covariance test. IEEE Transactions on Big Data, 4(1), 55-64. </p>
+<p>Example Work III:  Zhang, Y., Xia, S., Chu, L^{#}., Yang, J., Wu, Q., & Pei, L^{#}. (2023). Dynamic Inertial Poser (DynaIP): Part-Based Motion Dynamics Learning for Enhanced Human Pose Estimation with Sparse Inertial Sensors. IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2024. </p>
+<p>Example Work IV: Liu, D., Chen, C., Xu, C., Qiu, R. C., & Chu, L^{#}. (2023). Self-supervised point cloud registration with deep versatile descriptors for intelligent driving. IEEE Transactions on Intelligent Transportation Systems, 24(9), 9767-9779. 
+<p>Example Work V: Liu, D., Chen, C., Xu, C., Cai, Q., Chu, L.^{#}, Wen, F., & Qiu, R. (2022). A robust and reliable point cloud recognition network under rigid transformation. IEEE Transactions on Instrumentation and Measurement, 71, 1-13.
+<p>Example Work VI: Liu D., Chu, L.^{#}, etc. Multi-Frame Neural Scene Flow: Generalization Bounds and Algorithms.
 <div id="footer">
 <div id="footer-text">
 Last updated on 2024-04-23 23:34:26 Pacific Daylight Time.
