--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Prior to that, I received my M.S.  and Ph.D. degrees from the
 <div class="infoblock">
 <div class="blockcontent">
 <p>As an <strong>interdisciplinary researcher</strong>, my research interests include integrating <strong> data physics into neural network optimization </strong> and 
-  the related <strong> Wireless Communications and Smart Sensing </strong>applications 
+  the related <strong> Communication, Sensing and, Perception </strong>applications 
   (In the computer science domain, it is related to the tasks of <strong>time series generation, prediction, and anomaly detection</strong>). 
   I am dedicated to <strong>reproducible research </strong> and have made many codes publicly available. 
  <a href="https://github.com/Leo-Chu" target=&ldquo;blank&rdquo;>Please visit detailed projects and related codes</a>. 
