--- a/overview.html
+++ b/overview.html
@@ -25,7 +25,7 @@
 <h1>Overview</h1>
 As an interdisciplinary researcher, my research interests include integrating statistics into neural network optimization and related applications in time series: the Tasks of generation, prediction, and abnormality detection. 
 
-<h2>1) Machine Learning(ML) Fundermentals:</h2> <strong> Key Words: <strong>  First-order Optimization; Convergence Analysis; Domain Adaptation; Predictive Learning; Transformers; Information Theory guided Representation Learning; Physic-inspired Neural
+<h2>1) Machine Learning(ML) Basics:</h2> <strong> Key Words: <strong>  First-order Optimization; Convergence Analysis; Domain Adaptation; Predictive Learning; Transformers; Information Theory guided Representation Learning; Physic-inspired Neural
 Network (NN); Random Matrix Theory; Theoretical Generalization Evaluation. 
 
    <p>
