--- a/overview.html
+++ b/overview.html
@@ -23,7 +23,7 @@
 <td id="layout-content">
 <div id="toptitle">
 <h1>Overview</h1>
-As an interdisciplinary researcher, my research interests include integrating statistics into neural network optimization and related applications in time series: the Tasks of generation, prediction, and abnormality detection. 
+As an interdisciplinary researcher, my research interests include integrating data statistics into neural network optimization and related applications in time series, i.e., the tasks of generation, prediction, and abnormality detection. 
 
 <h2>1) Machine Learning(ML) Basics:</h2> <strong> Key Words: <strong>  First-order Optimization; Convergence Analysis; Domain Adaptation; Predictive Learning; Transformers; Information Theory guided Representation Learning; Physic-inspired Neural
 Network (NN); Random Matrix Theory; Theoretical Generalization Evaluation. 
@@ -33,6 +33,8 @@ Network (NN); Random Matrix Theory; Theoretical Generalization Evaluation.
  <p>Example Work II: Prediction in Prediction: Addressing the Course of Accumulative Prediction Error. Under review. </p> 
 <p>Example Work III: Conditional Diffusion for Updating Signal-to-Interference Ratio Mapping. Under review. </p> 
 
+ </p>
+</div></div>
   
  <h2>2) ML (with zero-/few- shot setting) for Autonomous Driving <strong>Related Topics: <strong> Open set detection, point cloud recognition/ registration, 
    large-scale point cloud processing, flow estimation, and open-world perception.
@@ -42,7 +44,8 @@ Network (NN); Random Matrix Theory; Theoretical Generalization Evaluation.
 <p>Example Work II: Liu, D., Chen, C., Xu, C., Cai, Q., Chu, L.^{#}, Wen, F., & Qiu, R. (2022). A robust and reliable point cloud recognition network under rigid transformation. IEEE Transactions on Instrumentation and Measurement, 71, 1-13.
 <p>Example Work III: Liu D., Chu, L.^{#}, etc. Multi-Frame Neural Scene Flow: Generalization Bounds and Algorithms.
 
-
+</p>
+</div></div>
   
 <h2>3) ML (with zero-/few- shot setting) for Sensing and Perception: <strong>Related Topics: <strong>  </h2>  Activity Recognition/Reconstruction with Wearables/Radar/WIFI; Intelligent Sensing with
 PMU and IMU; Video-assisted Wearable Intelligence.  
