--- a/overview.html
+++ b/overview.html
@@ -36,7 +36,8 @@ Network (NN); Random Matrix Theory; Theoretical Generalization Evaluation.
  </p>
 
   
- <h2>2) ML (with zero-/few- shot setting) for Autonomous Driving <strong>Related Topics: <strong> Open set detection, point cloud recognition/ registration, 
+ <h2>2) ML (with zero-/few- shot setting) for Autonomous Driving</h2> 
+  <strong>Related Topics: <strong> Open set detection, point cloud recognition/ registration, 
    large-scale point cloud processing, flow estimation, and open-world perception.
 
 <div class="infoblock">
@@ -49,7 +50,8 @@ Network (NN); Random Matrix Theory; Theoretical Generalization Evaluation.
 </p>
 </div></div>
   
-<h2>3) ML (with zero-/few- shot setting) for Sensing and Perception: <strong>Related Topics: <strong>  </h2>  Activity Recognition/Reconstruction with Wearables/Radar/WIFI; Intelligent Sensing with
+<h2>3) ML (with zero-/few- shot setting) for Sensing and Perception </h2>
+  <strong>Related Topics: <strong>  </h2>  Activity Recognition/Reconstruction with Wearables/Radar/WIFI; Intelligent Sensing with
 PMU and IMU; Video-assisted Wearable Intelligence.  
 
 <div class="infoblock">
