--- a/overview.html
+++ b/overview.html
@@ -25,7 +25,7 @@
 <h1>Overview</h1>
 As an interdisciplinary researcher, my research interests include integrating data statistics into neural network optimization and related applications in time series, i.e., the tasks of generation, prediction, and abnormality detection. 
 
-<h2>1) Machine Learning(ML) Basics:</h2> <strong> Key Words: <strong>  First-order Optimization; Convergence Analysis; Domain Adaptation; Predictive Learning; Transformers; Information Theory guided Representation Learning; Physic-inspired Neural
+<h2>1) Machine Learning(ML) Basics:</h2> <strong>Related Topics: </strong>   First-order Optimization; Convergence Analysis; Domain Adaptation; Predictive Learning; Transformers; Information Theory guided Representation Learning; Physic-inspired Neural
 Network (NN); Random Matrix Theory; Theoretical Generalization Evaluation. 
 
   <div class="infoblock">
@@ -40,7 +40,7 @@ Network (NN); Random Matrix Theory; Theoretical Generalization Evaluation.
 
   
  <h2>2) ML (with zero-/few- shot setting) for Autonomous Driving</h2> 
-  <strong>Related Topics: <strong> Open set detection, point cloud recognition/ registration, 
+  <strong>Related Topics: </strong> Open set detection, point cloud recognition/ registration, 
    large-scale point cloud processing, flow estimation, and open-world perception.
 
 <div class="infoblock">
@@ -54,7 +54,7 @@ Network (NN); Random Matrix Theory; Theoretical Generalization Evaluation.
 </div></div>
   
 <h2>3) ML (with zero-/few- shot setting) for Sensing and Perception </h2>
-  <strong>Related Topics: <strong>  </h2>  Activity Recognition/Reconstruction with Wearables/Radar/WIFI; Intelligent Sensing with
+  <strong>Related Topics: </strong>   Activity Recognition/Reconstruction with Wearables/Radar/WIFI; Intelligent Sensing with
 PMU and IMU; Video-assisted Wearable Intelligence.  
 
 <div class="infoblock">
@@ -65,7 +65,7 @@ PMU and IMU; Video-assisted Wearable Intelligence.
 <p>Example Work III:  Zhang, Y., Xia, S., Chu, L^{#}., Yang, J., Wu, Q., & Pei, L^{#}. (2023). Dynamic Inertial Poser (DynaIP): Part-Based Motion Dynamics Learning for Enhanced Human Pose Estimation with Sparse Inertial Sensors. IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2024. </p>
 
   
-<h2>4) PSG-ML for General Communications and Sensing: </h2>  Semantic Localization; Directional Spectrum Sensing; 1-bit Massive MIMO;
+<h2>4) PSG-ML for General Communications and Sensing: </h2> <strong>Related Topics: </strong>  Semantic Localization; Directional Spectrum Sensing; 1-bit Massive MIMO;
 V2V Propagation Modeling; Channel Estimation/Prediction; V2V Resource Allocation; Joint Communication and Sensing. 
 
 <div class="infoblock">
