--- a/overview.html
+++ b/overview.html
@@ -35,7 +35,7 @@ Network (NN); Random Matrix Theory; Theoretical Generalization Evaluation.
 <p>Example Work I:  Leveraging Information Theory Criteria for Deep Domain Adaptation: A Unified Framework and Convergence Analysis. Under review. </p> 
  <p>Example Work II: Prediction in Prediction: Addressing the Course of Accumulative Prediction Error. Under review. </p> 
 <p>Example Work III: Conditional Diffusion for Updating Signal-to-Interference Ratio Mapping. Under review. </p> 
-
+</div></div>
  </p>
 
   
@@ -49,7 +49,7 @@ Network (NN); Random Matrix Theory; Theoretical Generalization Evaluation.
 <p>Example Work I: Liu, D., Chen, C., Xu, C., Qiu, R. C., & Chu, L^{#}. (2023). Self-supervised point cloud registration with deep versatile descriptors for intelligent driving. IEEE Transactions on Intelligent Transportation Systems, 24(9), 9767-9779. 
 <p>Example Work II: Liu, D., Chen, C., Xu, C., Cai, Q., Chu, L.^{#}, Wen, F., & Qiu, R. (2022). A robust and reliable point cloud recognition network under rigid transformation. IEEE Transactions on Instrumentation and Measurement, 71, 1-13.
 <p>Example Work III: Liu D., Chu, L.^{#}, etc. Multi-Frame Neural Scene Flow: Generalization Bounds and Algorithms.
-
+</div></div>
 </p>
 </div></div>
   
@@ -63,7 +63,7 @@ PMU and IMU; Video-assisted Wearable Intelligence.
 <p>Example Work I:  Chu, L., Pei, L., & Qiu, R. (2021). Ahed: A heterogeneous-domain deep learning model for IoT-enabled smart health with few-labeled EEG data. IEEE Internet of Things Journal, 8(23), 16787-16800. </p>
 <p>Example Work II:  Chu, L., Qiu, R., He, X., Ling, Z., & Liu, Y. (2017). Massive streaming PMU data modeling and analytics based on multiple high-dimensional covariance test. IEEE Transactions on Big Data, 4(1), 55-64. </p>
 <p>Example Work III:  Zhang, Y., Xia, S., Chu, L^{#}., Yang, J., Wu, Q., & Pei, L^{#}. (2023). Dynamic Inertial Poser (DynaIP): Part-Based Motion Dynamics Learning for Enhanced Human Pose Estimation with Sparse Inertial Sensors. IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2024. </p>
-
+</div></div>
   
 <h2>4) PSG-ML for General Communications and Sensing: </h2> <strong>Related Topics: </strong>  Semantic Localization; Directional Spectrum Sensing; 1-bit Massive MIMO;
 V2V Propagation Modeling; Channel Estimation/Prediction; V2V Resource Allocation; Joint Communication and Sensing. 
@@ -75,7 +75,8 @@ V2V Propagation Modeling; Channel Estimation/Prediction; V2V Resource Allocation
 <p>Example Work II:  Chu, L., Wen, F., Li, L., & Qiu, R. (2019). Efficient nonlinear precoding for massive MIMO downlink systems with 1-bit DACs. IEEE Transactions on Wireless Communications, 18(9), 4213-4224. </p>
 <p>Example Work III:  Chu, L., Wen, F., & Qiu, R. C. (2019). Eigen-inference precoding for coarsely quantized massive MU-MIMO system with imperfect CSI. IEEE Transactions on Vehicular Technology, 68(9), 8729-8743. </p>
   
-
+</div></div>
+  
 Last updated on 2024-04-23 23:34:26 Pacific Daylight Time.
 </div>
 </div>
