--- a/overview.html
+++ b/overview.html
@@ -48,7 +48,7 @@ Network (NN); Random Matrix Theory; Theoretical Generalization Evaluation.
 
 <p>Example Work I: Liu, D., Chen, C., Xu, C., Qiu, R. C., & Chu, L^{#}. (2023). Self-supervised point cloud registration with deep versatile descriptors for intelligent driving. IEEE Transactions on Intelligent Transportation Systems, 24(9), 9767-9779. 
 <p>Example Work II: Liu, D., Chen, C., Xu, C., Cai, Q., Chu, L.^{#}, Wen, F., & Qiu, R. (2022). A robust and reliable point cloud recognition network under rigid transformation. IEEE Transactions on Instrumentation and Measurement, 71, 1-13.
-<p>Example Work III: Liu D., Chu, L.^{#}, etc. Multi-Frame Neural Scene Flow: Generalization Bounds and Algorithms.
+<p>Example Work III: Liu D., Chu, L.^{#}, etc. Multi-Frame Neural Scene Flow.
 </div></div>
 </p>
 </div></div>
