--- a/publication.html
+++ b/publication.html
@@ -29,41 +29,48 @@
 </p>
 <h2>Under Going</h2>
 <ol>
+</p>
+</li> 
+<li><p> Interative Human Pose Estimation with Sparse Sensing Signals; <i>Jun. 2023 - Jun. 2024</i>. <br>
+ </strong>Role in Project: </strong> Key Researcher. <br> 
+</p>
+Details:  1)Data preprocessing Pose Estimation Datasets and customized dataset collection with Apple products (iPhone, iWatch, and Airpods);  <br>
+ 2) Implementation of pose estimation with transformers; <br>
+ 3) Introducing environmental context for pose estimates fintuning. <br> 
+</li>
+</p>
 <li><p>
 SWIFT: Opportunistic mm-Wave Receivers;  <i>Jan. 2023 - Dec. 2025</i>. <br>
-Supported by The U.S. National Science Foundation; <br> 
+Supported by The National Science Foundation; <br> 
 </strong>Role in Project: </strong> Key Researcher. <br> 
 </p> Details: 1) Initialization of Directional Spectrum Sensing (DSS) scheme for mmWave Networks; <br>
 2) Dataset Construction with Remcom Wireless Insite; <br>
-3) Introduction of Propagation Physic-informed ML for sensing and conditional data generation (Conditional Diffusion) <br> <br> 
-</p>
-</li> 
-<li><p> Intelligent V2V Communications: Technology for Improved Mobility; <i>Jun. 2023 - Jun. 2024</i>. <br>
- Supported by California METRANS Transportation Center; <br>
- </strong>Role in Project: </strong> Key Researcher. <br> 
-</p>
-Details:  1)Data preprocessing for the data collected in scenarios (truck-to-truck, car-to-car, and car-to-car with trucks;  <br>
- 2) Implementation of Predictive learning algorithms for Accurate V2V channel prediction in different geometries; <br>
- 3) Introducing Meta-learning for Model-agnostic channel prediction and resource allocation. <br> 
-</li>
-</p>
+3) Introduction of Propagation Physic-informed ML for sensing and conditional 4D CSI data generation (Conditional Diffusion) <br> <br> 
+
   
 <h2>Done</h2>
-<ol>
-<li><p>  Propagation Physic-informed  for Scalable and Privacy-preserving Localization in B5G Networks;  <i>Mar. 2021 - Mar. 2023</i>.
- <br> Supported by  King Abdulaziz City for Science and Technology, Saudi Arabia; <br>
-</strong>Role in Project: </strong> Key Researcher. <br> 
-</p> Details:  1) Introduction of Semantic Localization Scheme to the literature; <br>
- 2) Deep Domain Adaptation based Transfer Learning for Enhanced Localization Algorithms; <br>
- 3) Experimental verification over CSI Measurements campaign with 28GHz channel sounder and WIFI receivers. <br> <br>
-<li><p> ML for Joint Communication and Sensing in B5G Systems;  <i>Jun. 2020 - Jun. 2022</i>. <br>
+</p>
+<li><p> Efficient ML for Perception and Sensing with Wearables;  <i>Jun. 2020 - Jun. 2022</i>. <br>
  Supported by  OCPC; <br>
  </strong>Role in Project: Principal Investigator </strong>  <br>
 </p> Details:  1) Integration of Information theory with efficient representation learning algorithms. <br>
  2) Application of new ML algorithms for joint channel modeling and UE activity recognition/reconstruction; <br>
- 3) Implement Meta ML for Intelligent Sensing, including the setting of few-labeled data and limited memory budget.   <br>
+ 3) Implement Meta ML for Intelligent Sensing (human activity recognition and pose estimation), including the conditions of few-labeled data and limited memory budget.   <br>
 </li>
 </ol>
+</li> 
+<li><p> Intelligent V2V Communications: Technology for Improved Mobility; <i>Jun. 2023 - Jun. 2024</i>. <br>
+ Supported by California METRANS Transportation Center; <br>
+ </strong>Role in Project: </strong> Key Researcher. <br> 
+  Details:  1)Data preprocessing for the data collected in scenarios (truck-to-truck, car-to-car, and car-to-car with trucks;  <br>
+ 2) Implementation of Predictive learning algorithms for Accurate V2V channel prediction in different geometries; <br>
+ 3) Introducing Meta-learning for Model-agnostic channel prediction and resource allocation. <br> 
+<li><p>  Propagation Physic-informed  for Scalable and Privacy-preserving Localization;  <i>Mar. 2021 - Mar. 2023</i>.
+ <br> Supported by  King Abdulaziz City for Science and Technology, Saudi Arabia; <br>
+</strong>Role in Project: </strong> Key Researcher. <br> 
+</p> Details:  1) Introduction of Semantic Localization Scheme to the literature; <br>
+ 2) Deep Domain Adaptation-based Transfer Learning for Enhanced Localization Algorithms; <br>
+ 3) Experimental verification over CSI Measurements campaign with 28GHz channel sounder and WIFI receivers. <br> <br>
 <div id="footer">
 <div id="footer-text">
 Last updated on 2024-05-03 09:53:09 Pacific Daylight Time.
