--- a/publication.html
+++ b/publication.html
@@ -31,7 +31,7 @@
 <ol>
 </p>
 </li> 
-<li><p> Interative Human Pose Estimation with Sparse Sensing Signals; <i>Jun. 2023 - Jun. 2024</i>. <br>
+<li><p> Interactive Human Pose Estimation with Sparse Sensing Signals; <i>Dec. 2022 - Dec, 2025</i>. <br>
  </strong>Role in Project: </strong> Key Researcher. <br> 
 </p>
 Details:  1)Data preprocessing Pose Estimation Datasets and customized dataset collection with Apple products (iPhone, iWatch, and Airpods);  <br>
@@ -57,14 +57,14 @@ Supported by The National Science Foundation; <br>
  2) Application of new ML algorithms for joint channel modeling and UE activity recognition/reconstruction; <br>
  3) Implement Meta ML for Intelligent Sensing (human activity recognition and pose estimation), including the conditions of few-labeled data and limited memory budget.   <br>
 </li>
-</ol>
-</li> 
 <li><p> Intelligent V2V Communications: Technology for Improved Mobility; <i>Jun. 2023 - Jun. 2024</i>. <br>
  Supported by California METRANS Transportation Center; <br>
  </strong>Role in Project: </strong> Key Researcher. <br> 
   Details:  1)Data preprocessing for the data collected in scenarios (truck-to-truck, car-to-car, and car-to-car with trucks;  <br>
  2) Implementation of Predictive learning algorithms for Accurate V2V channel prediction in different geometries; <br>
  3) Introducing Meta-learning for Model-agnostic channel prediction and resource allocation. <br> 
+
+</p>
 <li><p>  Propagation Physic-informed  for Scalable and Privacy-preserving Localization;  <i>Mar. 2021 - Mar. 2023</i>.
  <br> Supported by  King Abdulaziz City for Science and Technology, Saudi Arabia; <br>
 </strong>Role in Project: </strong> Key Researcher. <br> 
