--- a/education.html
+++ b/education.html
@@ -33,8 +33,8 @@
 </li>
 </ul>
 <ul>
-<li><p> Senior Research Staff, School of Electronic Information and Electrical Engineering, Shanghai Jiao Tong University (SJTU), Jan. 2020 - Sep. 2021.
-<li><p> Research Topic: Integrating Information Theory into Machine Learning for Enhanced Communication and Sensing in 5G and Beyond Networks; Collaborator: <a href="https://scholar.google.com/citations?user=Vm7d2EkAAAAJ&hl=en" target=&ldquo;blank&rdquo;> Prof. Ling Pei </a> <br /> 
+<li><p> Researcher, School of Electronic Information and Electrical Engineering, Shanghai Jiao Tong University (SJTU), Jan. 2020 - Sep. 2021.
+<li><p> Research Topic: Information Theory inspired Machine Learning for Intelligent Sensing; Collaborator: <a href="https://scholar.google.com/citations?user=Vm7d2EkAAAAJ&hl=en" target=&ldquo;blank&rdquo;> Prof. Ling Pei </a> <br /> 
 </p>
 </li>
 </ul>
@@ -57,7 +57,7 @@
 </ul>
 <ul>
 <li><p> M.S., School of Information and Communication Engineering, University of Electronic Science and Technology of China (UESTC), Chengdu, China, Sep. 2012 - Jun. 2015
-<li><p> Thesis:  Research on Robust Indoor Localization Algorithms Using Low Rank Matrix Completion (In Chinese); Thesis Advisor: Xiansheng Guo.
+<li><p> Thesis:  Research on Robust Indoor Localization Algorithms Using Low-Rank Matrix Completion (In Chinese); Thesis Advisor: Xiansheng Guo.
 </p> 
 </li>
 </ul>
@@ -65,8 +65,23 @@
 
 </p>
 <h2>Academic Services</h2>
-<p> He authored over fifty papers, holds several patents, and contributed to three book chapters. He regularly reviews technical papers, completing 100+ peer reviews for 20+ SCI-indexed journals, including 10+ IEEE Transactions. He received the 2015 Distinguished Master's Thesis Award, the 2020 SJTU Doctoral Excellence Award, and a 2020 International Postdoctoral Fellowship. He serves a TPC member for several conferences and an academic/associate editor for three SCI-indexed journals. He presented a tutorial at IEEE GLOBECOM 2022 and emphasizes reproducible research by sharing his code with the public.
+<p> He authored over fifty papers, holds several patents, and contributed to three book chapters. He regularly reviews technical papers, completing 100+ peer reviews for 20+ SCI-indexed journals, including 10+ IEEE Transactions. He received the 2015 Distinguished Master's Thesis Award, the 2020 SJTU Doctoral Excellence Award, and a 2020 International Postdoctoral Fellowship. He serves as a TPC member for several conferences and an academic/associate editor for three SCI-indexed journals. He presented a tutorial at IEEE GLOBECOM 2022; He emphasizes reproducible research by sharing his code with the public.
 
+<h3>Editorial Service:</h3>  
+<p>1) Associate Editor, <strong> IEEE Open Journal of Vehicular Technology (Impact Factor: 6.4)</strong>, Since Oct. 2024.
+<p>3) Associate Editor, <strong> IET Electrical Systems in Transportation (Impact Factor: 2.387)</strong>, Since Jun. 2023.
+<p>2) Academic Editor, <strong> PLOS ONE (Impact Factor: 3.752)</strong>, Since Sep. 2023.
+<p>4) Academic Editor, <strong> Wiley Journal of Sensors (Impact Factor: 2.55) </strong>, Since Jan. 2023.
+<p>5) Leading Guest Editor for the special issue ”When Mixed Reality Meets Smart Sensing with
+Wearables: The Pursuit for Efficiency, Interpretability, and Trustworthiness” in Applied Sciences;
+<p>6) Associate Editor, <strong> Journal of Artificial Intelligence and Big Data </strong>, since 2022.
+<p>7) Editorial Board Member, <strong> Modern Intelligent Times (MIT, 2957-7942)</strong>, Sep.2022-Aug.2024.
+
+<p> Technical Program Committee for the peer-reviewed conferences:
+<p>1) IEEE Annual International Conference on Network and Information Systems for Computers, 2022.
+<p>2) The IOP International Conference on Computer Networks and Communications, 2022.
+
+  
 <h3>Memberships</h3>  
 <p>IEEE <strong>Senior Member</strong>, since 2022;
 <p>IEEE Communication Society Membership;
@@ -97,20 +112,7 @@ Information Sciences; 20) Digital Signal Processing.
 <p>3) The Annual International Conference of the IEEE Engineering in Medicine and Biology Society (IEEE-EMBC), since 2024.
 <p>4) IEEE International Conference on Communications (IEEE-ICC), since 2024.
 
-<h3>Editorial Service:</h3>  
-<p>1) Associate Editor, <strong> IEEE Open Journal of Vehicular Technology (Impact Factor: 6.4)</strong>, Since Oct. 2024.
-<p>3) Associate Editor, <strong> IET Electrical Systems in Transportation (Impact Factor: 2.387)</strong>, Since Jun. 2023.
-<p>2) Academic Editor, <strong> PLOS ONE (Impact Factor: 3.752)</strong>, Since Sep. 2023.
-<p>4) Academic Editor, <strong> Wiley Journal of Sensors (Impact Factor: 2.55) </strong>, Since Jan. 2023.
-<p>5) Leading Guest Editor for the special issue ”When Mixed Reality Meets Smart Sensing with
-Wearables: The Pursuit for Efficiency, Interpretability, and Trustworthiness” in Applied Sciences;
-<p>6) Associate Editor, <strong> Journal of Artificial Intelligence and Big Data </strong>, since 2022.
-<p>7) Editorial Board Member, <strong> Modern Intelligent Times (MIT, 2957-7942)</strong>, Sep.2022-Aug.2024.
 
-<p> Technical Program Committee for the peer-reviewed conferences:
-<p>1) IEEE Annual International Conference on Network and Information Systems for Computers, 2022.
-<p>2) The IOP International Conference on Computer Networks and Communications, 2022.
-  
 </p>
 <div id="footer">
 <div id="footer-text">
