--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@ Email: lc_285 [AT] usc [dot] edu <br />
 </p>
 </td></tr></table>
 <h2>Welcome</h2>
-<p>I am a full-time research scholar in the Department of Electrical Engineering at the University of Southern California, affiliated with the
+<p>I am a researcher in the Department of Electrical Engineering at the University of Southern California, affiliated with the
 <a href="https://wides.usc.edu/" target=&ldquo;blank&rdquo;>Wireless Devices and Systems (WiDeS) Group</a>, under the supervision of Professor
 <a href="https://wides.usc.edu/founder.html" target=&ldquo;blank&rdquo;>Andreas F. Molisch</a>.
 Prior to that, I received my M.S.  and Ph.D. degrees from the
 <a href="https://en.uestc.edu.cn/" target=&ldquo;blank&rdquo;>Department of Electronic Engineering</a>,
-<a href="https://en.sjtu.edu.cn/" target=&ldquo;blank&rdquo;>UESTC and SJTU</a> in 2015 and 2019, respectively. My advisor was Professor
+<a href="https://en.sjtu.edu.cn/" target=&ldquo;blank&rdquo;>UESTC and SJTU</a> in 2015 and 2020, respectively. My advisor was Professor
 <a href="https://scholar.google.com/citations?user=FTLNXX8AAAAJ&hl=en " target=&ldquo;blank&rdquo;>Robert C. Qiu</a>.
 </p>
 <div class="infoblock">
 <div class="blockcontent">
-<p>As an <strong>interdisciplinary researcher</strong>, my research interests include integrating <strong> data physics into neural network optimization </strong> and 
-  the related <strong> Communication, Sensing, and Perception </strong>applications 
-  (In the computer science domain, it is related to the tasks of <strong>time series generation, prediction, and anomaly detection</strong>). 
+<p>As an <strong>interdisciplinary researcher</strong>, my research focuses on <strong>representation learning grounded in information theory, 
+  including the use of unlabeled data, information bottleneck principles, 
+  and memory/iteration-efficient optimization<strong>. My work spans applications in <strong>scene understanding, sensing, prediction, and planning<strong>. 
   I am dedicated to <strong>reproducible research </strong> and have made many codes publicly available. 
  <a href="https://github.com/Leo-Chu" target=&ldquo;blank&rdquo;>Please visit detailed projects and related codes</a>. 
 </p>
